[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://parser/parsers.tscn" type="PackedScene" id=2]

[node name="main_menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="start_game_btn" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 22.0
margin_right = 204.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start Game"
flat = false
align = 1

[node name="load_files_dialog" type="FileDialog" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 262.0
margin_top = 71.0
margin_right = 854.0
margin_bottom = 413.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Verzeichnis w√§hlen"
resizable = false
dialog_text = "Please select the Anno 1602 folder."
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 2
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "E:/Spiele/Klassiker/Anno 1602"
current_file = ""
current_path = "E:/Spiele/Klassiker/Anno 1602/"
_sections_unfolded = [ "Dialog" ]

[node name="load_files_btn" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 64.0
margin_right = 205.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Anno 1602 Files"
flat = false
align = 1

[node name="warning_dialog" type="AcceptDialog" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 187.0
margin_right = 468.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Warnung!"
resizable = false
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="parsers" parent="." index="4" instance=ExtResource( 2 )]

[connection signal="pressed" from="start_game_btn" to="." method="_on_start_game_btn_pressed"]

[connection signal="dir_selected" from="load_files_dialog" to="." method="_on_load_files_dialog_dir_selected"]

[connection signal="pressed" from="load_files_btn" to="." method="_on_load_files_btn_pressed"]


